# python-rpm-vercmp

./: .gitignore  README.rst  setup.cfg  test-requirements.txt  tox.ini
rpm_vercmp/: __init__.py  vercmp.py
