[metadata]
name = rpm_vercmp
author = Mihai Ibanescu
author-email = Mihai.Ibanescu@sas.com
summary = Pure Python implementation of rpmvercmp
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Build Tools
    Topic :: System :: Archiving :: Packaging
test-suite = rpm_vercmp.tests

[files]
packages = rpm_vercmp

[pbr]
autodoc_tree_index = true
autodoc_index_modules = true
autodoc_exclude_modules = rpm_vercmp.tests.*

[flake8]
ignore = E402
